// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with props 1`] = `
<Layout
  campus={[Function]}
  campuses={Array []}
  firstName={[Function]}
  header={
    <span>
      header
    </span>
  }
  isEmail={[Function]}
  lastName={[Function]}
  next={[Function]}
  personal={Object {}}
>
  <span>
    child
  </span>
</Layout>
`;

exports[`test renders with props 1`] = `
<Layout
  campus={[Function]}
  campuses={Array []}
  firstName={[Function]}
  header={
    <span>
      header
    </span>
  }
  isEmail={[Function]}
  lastName={[Function]}
  next={[Function]}
  personal={Object {}}>
  <span>
    child
  </span>
</Layout>
`;
